# pigmnts

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
.github/workflows/: cli.yml  lib.yml  main.yml
lib/: Cargo.toml  LICENSE.md  README.md
lib/src/: color.rs  lib.rs  weights.rs
src/: color.rs  lib.rs  main.rs  rgba.rs  utils.rs  weights.rs
