[package]
name = "pigmnts-cli"
version = "0.1.0"
authors = ["Akash Hamirwasia"]
edition = "2018"
description = "Generate a color palette from an image using WebAssesmbly"
license = "MIT"
readme = "README.md"
repository = "https://github.com/blenderskool/pigmnts.git"

[dependencies]
clap = "2.33.0"
image = "0.23.2"
spinners = "1.2.0"
termion = "1.5.5"
prettytable-rs = "0.8.0"
pigmnts = { path = "lib" }
reqwest = { version = "0.10", features = ["blocking"] }

[[bin]]
name = "pigmnts"
path = "src/main.rs"

[workspace]
members = [
  "lib"
]