[package]
name = "pigmnts-cli"
version = "0.1.3"
authors = ["Akash Hamirwasia"]
edition = "2018"
description = "Generate a color palette from an image right on the command line"
license = "MIT"
readme = "README.md"
repository = "https://github.com/blenderskool/pigmnts.git"

[dependencies]
clap = "2.33.0"
image = "0.23.2"
spinners = "1.2.0"
termion = "1.5.5"
prettytable-rs = "0.8.0"
pigmnts = { path = "lib", version = "0.7.0" }
reqwest = { version = "0.10", features = ["blocking"] }
serde_cbor = "0.11.1"
lazy_static = "^1.4.0"

[build-dependencies]
serde_json = "^1.0.52"
serde_cbor = "^0.11.1"

[[bin]]
name = "pigmnts"
path = "src/main.rs"

[workspace]
members = [
  "lib"
]

[profile.release]
lto = true
codegen-units = 1
