[package]
name = "pigmnts"
version = "0.6.0"
authors = ["Akash Hamirwasia"]
edition = "2018"
description = "Generate a color palette from an image using WebAssesmbly"
license = "MIT"
readme = "README.md"
repository = "https://github.com/blenderskool/pigmnts/tree/master/lib"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.rand]
version = "0.7.2"
features = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2.50"
features = [
  "serde-serialize"
]

[dependencies.web-sys]
version = "0.3.30"
features = [
  "HtmlCanvasElement",
  "ImageData",
  "CanvasRenderingContext2d",
  # "console"
]

[profile.release]
lto = true
opt-level = 'z'